=======
CHANGES
=======

3.8.1 (unreleased)
------------------

- ...

3.8.0 (2011-03-18)
------------------

- Implemented a ``defaultFactory`` attribute for all fields. It is a callable
  that can be used to compute default values. The simplest case is::

    Date(defaultFactory=datetime.date.today)

  If the factory needs a context to compute a sensible default value, then it
  must provide ``IContextAwareDefaultFactory``, which can be used as follows::

    @provider(IContextAwareDefaultFactory)
    def today(context):
        return context.today()

    Date(defaultFactory=today)

3.7.1 (2010-12-25)
------------------

- The validation token, used in the validation of schema with Object
  Field to avoid infinite recursion, has been renamed.
  ``__schema_being_validated`` became ``_v_schema_being_validated``,
  a volatile attribute, to avoid persistency and therefore,
  read/write conflicts.

- Don't allow "[\]^`" in DottedName.
  https://bugs.launchpad.net/zope.schema/+bug/191236

3.7.0 (2010-09-12)
------------------

- Improve error messages when term tokens or values are duplicates.

- Fix the buildout so the tests run.

3.6.4 (2010-06-08)
------------------

- fix validation of schema with Object Field that specify Interface schema.

3.6.3 (2010-04-30)
------------------

- Prefer the standard libraries doctest module to the one from zope.testing.

3.6.2 (2010-04-30)
------------------

- Avoid maximum recursion when validating Object field that points to cycles

- Made the dependency on ``zope.i18nmessageid`` optional.

3.6.1 (2010-01-05)
------------------

- Allow "setup.py test" to run at least a subset of the tests runnable
  via ``bin/test`` (227 for ``setup.py test`` vs. 258. for
  ``bin/test``)

- Make ``zope.schema._bootstrapfields.ValidatedProperty`` descriptor
  work under Jython.

- Make "setup.py test" tests pass on Jython.

3.6.0 (2009-12-22)
------------------

- Prefer zope.testing.doctest over doctestunit.
